# Prettier-Process

./: .gitignore  Cargo.toml  README.md
Chuka/: Cargo.toml  README.md
Chuka/src/: cli.rs  comp.rs  display.rs  dwn.rs  main.rs
Prettier-Process/: Cargo.toml  README.md
Prettier-Process/src/: cli.rs  live.rs  proc.rs  stats.rs  struct_proc.rs
src/: cli.rs  live.rs  main.rs  proc.rs  stats.rs  struct_proc.rs
