[package]
name = "Chuka"
version = "0.1.0"
edition = "2024"
authors = ["Avril Justin"]

[dependencies]
egui = "0.26.0"
eframe = "0.28.0"
clap = { version = "4.5", features = ["derive"] }
sevenz-rust={version="0.6", features=["compress"]}
xz2 = "0.1"
zstd = "0.13"
brotli2 = "0.3"
brotli = "8.0.2"
hound = "3.5"
flacenc = "0.5.0"


[build-dependencies]